done DeleteStory method
