# api/docs/swagger.yaml
@@ -78,6 +78,11 @@ definitions:
       title:
         type: string
     type: object
+  stories.ResponseDeleteStory:
+    properties:
+      message:
+        type: string
+    type: object
   stories.ResponseEditStory:
     properties:
       author_id:
@@ -327,6 +332,35 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get stories info
+      tags:
+      - Content
+  /stories/{id}/delete:
+    delete:
+      consumes:
+      - application/json
+      description: this is for deleting story
+      parameters:
+      - description: id is required
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: returns message about deleting story
+          schema:
+            $ref: '#/definitions/stories.ResponseDeleteStory'
+        "400":
+          description: It occurs when user enter invalid params
+          schema:
+            $ref: '#/definitions/models.Error'
+        "500":
+          description: It occurs when error happenes internal service
+          schema:
+            $ref: '#/definitions/models.Error'
+      summary: Delete Story
       tags:
       - Content
   /stories/{id}/edit:
